fix text alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,3 +21,7 @@ body {
 		flex-shrink: 0;
 	}
 }
+
+.distro-light-signup--open-external {
+  line-height: 26px;
+}
